2007.Oct.09 (svn.debian.org/tux4kids - revision 291)
  Docs:
      * Added license notice for Andika font to 
        README_DATA_LICENSES.TXT as well as including full license text
        for the Open Font License 1.1 as "OFL.txt" under docs.

      David Bruce <dbruce@tampabay.rr.com>

2007.Oct.09 (svn.debian.org/tux4kids - revision 290)
  Build:
      * Ran Autoconf's "autoupdate" util to update configure.ac and 
        the m4 macros to work properly with the current version (1.10)
        of Automake (hope this doesn't break things for those using
        automake 1.9.6).

      David Bruce <dbruce@tampabay.rr.com>


2007.Oct.09 (svn.debian.org/tux4kids - revision 289)
  Options:
      * Start of "real" help for tuxmath. I've tried to keep the text
	simple for early readers, but I imagine this could be improved.
	Needs a help sprite in the menu.

      Tim Holy <holy@wustl.edu>
	
	
2007.Oct.03 (svn.debian.org/tux4kids - revision 283)
  Version 1.5.5
  Code:
      * One-liner bug fix in mathcards.c for rare segfaults during
        problem list generation (thanks to Tim Holy's test program
        for mathcards).
      * Elimination of "evil" macros in titlescreen.h.

      David Bruce <dbruce@tampabay.rr.com>


2007.Sep.28 (svn.debian.org/tux4kids - revision 279)
  Code:
      * Completed the transition in TitleScreen to using a generic
	menu-traversal function, choose_menu_item.  All the menus have
	been transitioned over to the new code.  This version fixes a
	couple of minor visual glitches, slightly enhances consistency
	across menus, and may fix a bug in the mouse-handling code.  But
	by and large the main effort has been to replicate the previous
	behavior using only a single menu-traversal function.  It has
	been tested for memory leaks with valgrind (none found).

	Tim Holy <holy@wustl.edu>

	
2007.Sep.28 (svn.debian.org/tux4kids - revision 277)
  Game:
    * Completed implementation of high score table and 