@@ -1,8 +1,8 @@
-# Makefile.in generated by automake 1.9.6 from Makefile.am.
+# Makefile.in generated by automake 1.10 from Makefile.am.
 # data/images/sprites/Makefile.  Generated from Makefile.in by configure.
 
 # Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
-# 2003, 2004, 2005  Free Software Foundation, Inc.
+# 2003, 2004, 2005, 2006  Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -13,15 +13,11 @@
 # PARTICULAR PURPOSE.
 
 
-srcdir = .
-top_srcdir = ../../..
 
 pkgdatadir = $(datadir)/tuxmath
 pkglibdir = $(libdir)/tuxmath
 pkgincludedir = $(includedir)/tuxmath
-top_builddir = ../../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
-INSTALL = /usr/bin/install -c
 install_sh_DATA = $(install_sh) -c -m 644
 install_sh_PROGRAM = $(install_sh) -c
 install_sh_SCRIPT = $(install_sh) -c
@@ -33,9 +29,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-pc-linux-gnu
-host_triplet = i686-pc-linux-gnu
-target_triplet = i686-pc-linux-gnu
+build_triplet = i386-pc-linux-gnu
+host_triplet = i586-pc-mingw32msvc
+target_triplet = i586-pc-mingw32msvc
 subdir = data/images/sprites
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -49,21 +45,17 @@ CONFIG_CLEAN_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/tim/src/tux4kids/tuxmath/trunk/missing --run aclocal-1.9
-AMDEP_FALSE = #
-AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/tim/src/tux4kids/tuxmath/trunk/missing --run tar
-AUTOCONF = ${SHELL} /home/tim/src/tux4kids/tuxmath/trunk/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/tim/src/tux4kids/tuxmath/trunk/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/tim/src/tux4kids/tuxmath/trunk/missing --run automake-1.9
-AWK = gawk
-BUILD_MINGW32_FALSE = 
-BUILD_MINGW32_TRUE = #
-CC = gcc
+ACLOCAL = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run aclocal-1.10
+AMTAR = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run tar
+AUTOCONF = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run automake-1.10
+AWK = mawk
+CC = i586-mingw32msvc-gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2 -I/usr/include/SDL -D_GNU_SOURCE=1 -D_REENTRANT
-CPP = gcc -E
-CPPFLAGS = 
+CFLAGS = -g -O2 -I/usr/include/SDL -D_GNU_SOURCE=1 -D_REENTRANT -D__GW32__
+CPP = i586-mingw32msvc-gcc -E
+CPPFLAGS = -I/usr/local/cross-tools/i586-mingw32msvc/include -idirafter /usr/local/cross-tools/i586-mingw32msvc/include/glibc
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -71,26 +63,24 @@ ECHO_C =
 ECHO_N = -n
 ECHO_T = 
 EGREP = /bin/grep -E
-EXEEXT = 
+EXEEXT = .exe
 GREP = /bin/grep
+INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
-INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
-LDFLAGS = 
-LIBOBJS = 
-LIBS =  -L/usr/lib -lSDL -lSDL_image -lSDL_mixer -lSDL_ttf
-LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/tim/src/tux4kids/tuxmath/trunk/missing --run makeinfo
+INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
+LDFLAGS = -L/usr/local/cross-tools/i586-mingw32msvc/lib
+LIBOBJS =  ${LIBOBJDIR}strtod$U.o
+LIBS =  -lmingw32 -lSDLmain -L/usr/lib -lSDL -lSDL_image -lSDL_mixer -lSDL_ttf -lgw32c -luuid -lole32 -lwsock32 -mwindows
+LTLIBOBJS =  ${LIBOBJDIR}strtod$U.lo
+MAKEINFO = ${SHELL} /home/dbruce/tux4kids/tuxmath/trunk/missing --run makeinfo
+MKDIR_P = /bin/mkdir -p
 NAME_VERSION = tuxmath-1.5.5
-NSIS = no
-NSI_BUILD_FALSE = #
-NSI_BUILD_TRUE = 
-NSI_DLL_DIR = /home/tim/tuxmath_dll
+NSIS = /usr/bin/makensis
+NSI_DLL_DIR = /home/dbruce/tuxmath_dll
 NSI_INSTALL_DIR = mingw32
 NSI_TUXMATH_CONF_DIR = no
-NSI_USE_TUXMATH_CONF_FALSE = 
-NSI_USE_TUXMATH_CONF_TRUE = #
 OBJEXT = o
 PACKAGE = tuxmath
 PACKAGE_BUGREPORT = tuxmath-devel@lists.sourceforge.net
@@ -105,57 +95,63 @@ SDL_CFLAGS = -I/usr/include/SDL -D_GNU_SOURCE=1 -D_REENTRANT
 SDL_CONFIG = /usr/bin/sdl-config
 SDL_LIBS = -L/usr/lib -lSDL
 SET_MAKE = 
-SHELL = /bin/bash
-STRIP = 
+SHELL = /bin/sh
+STRIP = i586-mingw32msvc-strip
 VERSION = 1.5.5
-WINDRES = 
-ac_ct_CC = gcc
-am__fastdepCC_FALSE = #
-am__fastdepCC_TRUE = 
+WINDRES = /usr/bin/i586-mingw32msvc-windres
+abs_builddir = /home/dbruce/tux4kids/tuxmath/trunk/data/images/sprites
+abs_srcdir = /home/dbruce/tux4kids/tuxmath/trunk/data/images/sprites
+abs_top_builddir = /home/dbruce/tux4kids/tuxmath/trunk
+abs_top_srcdir = /home/dbruce/tux4kids/tuxmath/trunk
+ac_ct_CC = 
 am__include = include
 am__leading_dot = .
 am__quote = 
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i686-pc-linux-gnu
-build_alias = 
-build_cpu = i686
+build = i386-pc-linux-gnu
+build_alias = i386-linux
+build_cpu = i386
 build_os = linux-gnu
 build_vendor = pc
+builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-pc-linux-gnu
-host_alias = 
-host_cpu = i686
-host_os = linux-gnu
+host = i586-pc-mingw32msvc
+host_alias = i586-mingw32msvc
+host_cpu = i586
+host_os = mingw32msvc
 host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /home/tim/src/tux4kids/tuxmath/trunk/install-sh
+install_sh = $(SHELL) /home/dbruce/tux4kids/tuxmath/trunk/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = mkdir -p --
+mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /usr/local
-program_transform_name = s,x,x,
+prefix = /usr/local/cross-tools/i586-mingw32msvc
+program_transform_name = s&^&i586-mingw32msvc-&
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
+srcdir = .
 sysconfdir = ${prefix}/etc
-target = i686-pc-linux-gnu
-target_alias = 
-target_cpu = i686
-target_os = linux-gnu
+target = i586-pc-mingw32msvc
+target_alias = i586-mingw32msvc
+target_cpu = i586
+target_os = mingw32msvc
 target_vendor = pc
+top_builddir = ../../..
+top_srcdir = ../../..
 EXTRA_DIST = cascade0.png	\
 	cascade10.png	\
 	cascade1.png	\
@@ -291,7 +287,6 @@ $(top_srcdir)/configure:  $(am__configure_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
-uninstall-info-am:
 tags: TAGS
 TAGS:
 
@@ -300,22 +295,21 @@ CTAGS:
 
 
 distdir: $(DISTFILES)
-	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
-	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
-	list='$(DISTFILES)'; for file in $$list; do \
-	  case $$file in \
-	    $(srcdir)/*) file=`echo "$$file" | sed "s|^$$srcdirstrip/||"`;; \
-	    $(top_srcdir)/*) file=`echo "$$file" | sed "s|^$$topsrcdirstrip/|$(top_builddir)/|"`;; \
-	  esac; \
+	@srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g'`; \
+	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g'`; \
+	list='$(DISTFILES)'; \
+	  dist_files=`for file in $$list; do echo $$file; done | \
+	  sed -e "s|^$$srcdirstrip/||;t" \
+	      -e "s|^$$topsrcdirstrip/|$(top_builddir)/|;t"`; \
+	case $$dist_files in \
+	  */*) $(MKDIR_P) `echo "$$dist_files" | \
+			   sed '/\//!d;s|^|$(distdir)/|;s,/[^/]*$$,,' | \
+			   sort -u` ;; \
+	esac; \
+	for file in $$dist_files; do \
 	  if test -f $$file || test -d $$file; then d=.; else d=$(srcdir); fi; \
-	  dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
-	  if test "$$dir" != "$$file" && test "$$dir" != "."; then \
-	    dir="/$$dir"; \
-	    $(mkdir_p) "$(distdir)$$dir"; \
-	  else \
-	    dir=''; \
-	  fi; \
 	  if test -d $$d/$$file; then \
+	    dir=`echo "/$$file" | sed -e 's,/[^/]*$$,,'`; \
 	    if test -d $(srcdir)/$$file && test $$d != $(srcdir); then \
 	      cp -pR $(srcdir)/$$file $(distdir)$$dir || exit 1; \
 	    fi; \
@@ -374,11 +368,19 @@ info-am:
 
 install-data-am:
 
+install-dvi: install-dvi-am
+
 install-exec-am:
+
+install-html: install-html-am
 
 install-info: install-info-am
 
 install-man:
+
+install-pdf: install-pdf-am
+
+install-ps: install-ps-am
 
 installcheck-am:
 
@@ -398,16 +400,19 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-info-am
+uninstall-am:
+
+.MAKE: install-am install-strip
 
 .PHONY: all all-am check check-am clean clean-generic distclean \
 	distclean-generic distdir dvi dvi-am html html-am info info-am \
-	install install-am install-data install-data-am install-exec \
-	install-exec-am install-info install-info-am install-man \
+	install install-am install-data install-data-am install-dvi \
+	install-dvi-am install-exec install-exec-am install-html \
+	install-html-am install-info install-info-am install-man \
+	install-pdf install-pdf-am install-ps install-ps-am \
 	install-strip installcheck installcheck-am installdirs \
 	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic pdf pdf-am ps ps-am uninstall uninstall-am \
-	uninstall-info-am
+	mostlyclean-generic pdf pdf-am ps ps-am uninstall uninstall-am
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
